--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,12 @@ jobs:
           # BEGIN Android ARM 8
           - goos: android
             goarch: arm64
+          - goos: android
+            goarch: 386
+          - goos: android
+            goarch: amd64
+          - goos: android
+            goarch: arm
           # END Android ARM 8
           # Windows ARM 7
           - goos: windows
